[tool.poetry]
name = "receipts-viewer"
version = "1"
description = ""
authors = ["mykhailo.maliukov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
sqlalchemy = "^2.0.37"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
psycopg2 = "^2.9.10"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
